--- a/cetlib/test/CMakeLists.txt
+++ b/cetlib/test/CMakeLists.txt
@@ -200,4 +200,7 @@ include(ParseAndAddCatchTests)
 set(AdditionalCatchParameters -s)
 ParseAndAddCatchTests(hypot_test)
 
-cet_test(bad_hard_cast_t COMPILE_ONLY TEST_PROPERTIES WILL_FAIL TRUE)
+foreach(compile_test IN ITEMS
+    bad_hard_cast_t bad_copy_all_t bad_for_all_container_t bad_for_all_func_t)
+  cet_test(${compile_test} COMPILE_ONLY TEST_PROPERTIES WILL_FAIL TRUE)
+endforeach()
