tests for `registry_via_id.h` and non-working `CMakeLists.txt`

--- a/cetlib/test/CMakeLists.txt
+++ b/cetlib/test/CMakeLists.txt
@@ -229,11 +229,15 @@ else()
     PROPERTIES WILL_FAIL TRUE)
 endif()
 
-cet_test(bad_reg_via_id_t COMPILE_ONLY)
+foreach (compile_test IN ITEMS
+        bad_reg_via_id_t bad_reg_via_id_t_2)
+cet_test(${compile_test} COMPILE_ONLY)
+endforeach()
 if (CMAKE_CXX_STANDARD GREATER_EQUAL 20)
-    set_property(TEST bad_reg_via_id_t PROPERTY PASS_REGULAR_EXPRESSION "has_id<K, V>")
+    set_property(TEST bad_reg_via_id_t PROPERTY PASS_REGULAR_EXPRESSION "val.id()")
+    set_property(TEST bad_reg_via_id_t_2 PROPERTY PASS_REGULAR_EXPRESSION "std::same_as<decltype(val.id()),K>")
 else()
-    set_tests_properties(bad_reg_via_id_t
+    set_tests_properties(bad_reg_via_id_t bad_reg_via_id_t_2
         PROPERTIES WILL_FAIL TRUE)
 endif()
 
