Negative test for `column.h` and concept implementation for `Connection.h`.
 * Adds test that fails for `column.h`. Could use refinement.

 * Adds `valid_policy` concept for `Connection.h`.

--- a/cetlib/test/CMakeLists.txt
+++ b/cetlib/test/CMakeLists.txt
@@ -245,4 +245,6 @@ else()
     PROPERTIES WILL_FAIL TRUE)
 endif()
 
-
+cet_test(bad_col_t COMPILE_ONLY)
+set_property(TEST bad_col_t PROPERTY
+  PASS_REGULAR_EXPRESSION "constraints not satisfied")
