With Zachary: use `requires` to improve errors for `bind_parameters`

--- a/cetlib/test/sqlite/CMakeLists.txt
+++ b/cetlib/test/sqlite/CMakeLists.txt
@@ -21,3 +21,6 @@ cet_test(transaction_t SCOPED
 cet_test(bad_col_t COMPILE_ONLY)
 set_property(TEST bad_col_t PROPERTY
   PASS_REGULAR_EXPRESSION "template constraint failure.*known_sqlite_type<T>")
+cet_test(bad_bind_parameter_t COMPILE_ONLY)
+set_property(TEST bad_bind_parameter_t PROPERTY
+  PASS_REGULAR_EXPRESSION " note: the required expression ‘get<\\(N - 1\\)>\\(t\\)’ is invalid")
