--- a/cetlib/test/sqlite/CMakeLists.txt
+++ b/cetlib/test/sqlite/CMakeLists.txt
@@ -18,9 +18,9 @@ cet_test(transaction_t SCOPED
   LIBRARIES PRIVATE cetlib::sqlite cetlib::cetlib
   TEST_PROPERTIES
   PASS_REGULAR_EXPRESSION "Transaction d'tor called before commit was called.")
-cet_test(bad_col_t COMPILE_ONLY)
-set_property(TEST bad_col_t PROPERTY
+cet_test(bad_col_t COMPILE_ONLY TEST_PROPERTIES
   PASS_REGULAR_EXPRESSION "template constraint failure.*known_sqlite_type<T>")
-cet_test(bad_bind_parameter_t COMPILE_ONLY)
-set_property(TEST bad_bind_parameter_t PROPERTY
+cet_test(bad_bind_parameter_t COMPILE_ONLY TEST_PROPERTIES
   PASS_REGULAR_EXPRESSION " note: the required expression ‘get<\\(N - 1\\)>\\(t\\)’ is invalid")
+cet_test(bad_select_t COMPILE_ONLY TEST_PROPERTIES
+  PASS_REGULAR_EXPRESSION " note: the expression ‘\\(\\.\\.\\. && stringish<T>\\) \\[with T = \\{not_stringish\\}\\]’ evaluated to ‘false’")
