`split_path()` -> `split_search_path()`
`split_path()` as written has two problems:

1. The name is ambiguous, especially since C++20 refers to a path as a
   location in the filesystem tree for a single file or directory.

1. The behavior with respect to clearing the results container is
   inconsistent, dependent on whether the provided search path is empty
   (cleared) or not (path elements are appended).

Accordingly:

* There is a new function overload set `cet::split_search_path()`, each
  member of the set having its own unambiguous semantics:
```.cpp
  std::vector<std::string> split_search_path(std::string const& search_path);

  template <detail::can_emplace_string T>
  void split_search_path(std::string const& search_path, T results);

  template <detail::can_emplace_string T>
  void split_search_path(std::string const& search_path, T results,
                         cet::tags::append_t);
```

* Tests for the above functions are implemented in
  `split_search_path_t.cc`.

* `split_path()` has been deprecated, and it is now implemented
  delegating to `split_search_path()`.

--- a/cetlib/CMakeLists.txt
+++ b/cetlib/CMakeLists.txt
@@ -56,6 +56,7 @@ cet_make_library(HEADERS_TARGET
     search_path.cc
     sha1.cc
     simple_stats.cc
+    split_search_path.cc
     split_path.cc
     split_by_regex.cc
   LIBRARIES
