--- a/cetlib/test/sqlite/CMakeLists.txt
+++ b/cetlib/test/sqlite/CMakeLists.txt
@@ -27,8 +27,10 @@ cet_test(bad_col_t COMPILE_ONLY LIBRARIES PRIVATE cetlib::headers
 cet_test(bad_bind_parameter_t COMPILE_ONLY
   LIBRARIES PRIVATE cetlib::headers
   TEST_PROPERTIES
-  PASS_REGULAR_EXPRESSION " note: the required expression ‘get<\\(N - 1\\)>\\(t\\)’ is invalid")
+  PASS_REGULAR_EXPRESSION " note: the required expression ${open_quote}get<\\(N - 1\\)>\\(t\\)${close_quote} is invalid")
 cet_test(bad_select_t COMPILE_ONLY
   LIBRARIES PRIVATE cetlib::headers cetlib_except::cetlib_except
   TEST_PROPERTIES
-  PASS_REGULAR_EXPRESSION " note: the expression ‘\\(\\.\\.\\. && stringish<T>\\) \\[with T = \\{not_stringish\\}\\]’ evaluated to ‘false’")
+  PASS_REGULAR_EXPRESSION
+  " note: the expression ${open_quote}\\(\\.\\.\\. && stringish<T>\\) \\[with T = \\{not_stringish\\}\\]${close_quote}\
+ evaluated to ${open_quote}false${close_quote}")
