Do not overwrite LD_LIBRARY_PATH if it exists

--- a/cetlib/test/CMakeLists.txt
+++ b/cetlib/test/CMakeLists.txt
@@ -200,7 +200,7 @@ cet_test(replace_all_test USE_BOOST_UNIT LIBRARIES PRIVATE cetlib::cetlib)
 # exception throw from the LibraryManager
 cet_test(regex_t USE_BOOST_UNIT LIBRARIES PRIVATE cetlib::cetlib
   TEST_WORKDIR ${CMAKE_CURRENT_SOURCE_DIR}
-  TEST_PROPERTIES ENVIRONMENT LD_LIBRARY_PATH=)
+  TEST_PROPERTIES ENVIRONMENT_MODIFICATION LD_LIBRARY_PATH=path_list_prepend:)
 
 cet_test(regex_standalone_t SOURCE regex_t.cc
   TEST_WORKDIR ${CMAKE_CURRENT_SOURCE_DIR})
